[gd_scene load_steps=3 format=3 uid="uid://bqvg2u3s4wo1s"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_5u2g6"]
[ext_resource type="Theme" uid="uid://odxvlb3cuew4" path="res://assets/themes/my_theme.tres" id="2_a638c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5u2g6")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 84.0
offset_right = 554.0
offset_bottom = 160.0
theme = ExtResource("2_a638c")
theme_type_variation = &"MenuTitle"
text = "This is the title!!!!!!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -205.0
offset_top = -237.0
offset_right = -58.0
offset_bottom = -44.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 40
alignment = 1

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ButtonQuit")
text = "Start"

[node name="ButtonOptions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ButtonCredits" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ButtonStart")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonOptions" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
